Add feature: load custom css from URL
using CORS Anywhere for now, need to investigate if it's a big bad 'no no' as I'm afraid it is.

--- a/src/styles/options.scss
+++ b/src/styles/options.scss
@@ -30,6 +30,11 @@
     font-weight: bold;
   }
 
+  .loading {
+    color: yellow;
+    font-weight: bold;
+  }
+
   .failure {
     color: red;
     font-weight: bold;
