Add specification for CSP for style injection
Firefox have some issue even with proper manifest.json declaration

--- a/src/styles/options.scss
+++ b/src/styles/options.scss
@@ -40,3 +40,15 @@
     font-weight: bold;
   }
 }
+
+.text-center {
+  text-align: center;
+}
+
+.mt-5 {
+  margin-top: 5px;
+}
+
+.mb-5 {
+  margin-bottom: 5px;
+}
