--- a/src/styles/users-label.scss
+++ b/src/styles/users-label.scss
@@ -4,6 +4,33 @@
   color: white;
   border-radius: 2px;
   margin: 0px 3px;
+  font-size: 10px;
+  cursor: pointer;
+}
+
+.label-edit-box {
+  font-family: 'Segoe UI', 'Tahoma', 'Geneva', 'Verdana', sans-serif;
+  font-size: 10px;
+  border-radius: 2px;
+  border: 1px solid slategray;
+  background-color: ghostwhite;
+  color: black;
+  display: none;
+  position: absolute;
+  padding: 5px;
+
+  .edit_label_actions {
+    text-align: center;
+    padding-top: 10px;
+
+    a {
+      padding-right: 5px;
+    }
+  }
+}
+
+.bg-none {
+  border: 1px solid slategray;
 }
 
 .bg-red {
@@ -16,10 +43,6 @@
 
 .bg-orange {
   background-color: orange;
-}
-
-.bg-yellow {
-  background-color: yellow;
 }
 
 .bg-dodgerblue {
