User labels adjust the text brigthness automatically
https://github.com/theCrius/tildes-extended/issues/5

--- a/src/styles/users-label.scss
+++ b/src/styles/users-label.scss
@@ -1,11 +1,18 @@
 .user-label {
   display: inline-block;
   padding: 3px;
-  color: white;
   border-radius: 2px;
   margin: 0px 3px;
   font-size: 10px;
   cursor: pointer;
+}
+
+.text-light {
+  color: #000 !important;
+}
+
+.text-dark {
+  color: #fff !important;
 }
 
 .label-edit-box {
