Remove !important from label color and rename class to not be ovveride
text-light and text-dark are already used by tildes
Ref: https://github.com/theCrius/tildes-extended/issues/9

--- a/src/styles/users-label.scss
+++ b/src/styles/users-label.scss
@@ -7,12 +7,12 @@
   cursor: pointer;
 }
 
-.text-light {
-  color: #000 !important;
+.label-light {
+  color: #000;
 }
 
-.text-dark {
-  color: #fff !important;
+.label-dark {
+  color: #fff;
 }
 
 .label-edit-box {
