--- a/src/styles/sticky-header.scss
+++ b/src/styles/sticky-header.scss
@@ -10,8 +10,12 @@
   position: fixed;
   padding-top: 5px;
   padding-bottom: 10px;
-  padding-left: 20px;
+  text-align: center;
   width: 100%;
   top: 50px;
   z-index: 990;
+}
+
+.TE-sticky-header-main {
+  padding-top: 100px;
 }
