Hide user-info altogether from the sticky bar

--- a/src/styles/sticky-header.scss
+++ b/src/styles/sticky-header.scss
@@ -13,7 +13,6 @@ header {
   .TE-topic-title {
     margin-bottom: 0px;
     padding-left: 10px;
-    width: 75%;
     max-width: 75%;
 
     overflow: hidden;
@@ -22,6 +21,6 @@ header {
   }
 
   .TE-user-info {
-    margin-left: 10px !important;
+    display: none !important;
   }
 }
