Add !important to no-header-logo + script run @ document_start
The css rule was overridden, added !important
The script running at document_end was making the logo appear and then being hidden. Moved it to the block that run on document_start to have the logo not appear at all.

--- a/src/styles/miscellaneous.scss
+++ b/src/styles/miscellaneous.scss
@@ -1,4 +1,4 @@
 .no-header-logo {
-  background-image: none;
-  padding-left: 0;
+  background-image: none !important;
+  padding-left: 0 !important;
 }
