Add support to load local json files
Added web_accessible_resource that will allow to access every json file in data/ and manifest.json

https://github.com/theCrius/tildes-extended/issues/33

--- a/src/styles/options.scss
+++ b/src/styles/options.scss
@@ -74,7 +74,7 @@ button {
 
   &:not(.active) {
     transition: background-color 0.4s;
-  
+
     &:hover {
       cursor: pointer;
       background-color: $selection-hover;
@@ -85,4 +85,8 @@ button {
 
 #features>div:not(.selected) {
   display: none;
+}
+
+#version {
+  font-size: 8pt;
 }
