Add topic listing navigation

--- a/src/styles/keyboard-navigation.scss
+++ b/src/styles/keyboard-navigation.scss
@@ -25,3 +25,17 @@
       }
   }
 }
+
+body,
+body.theme-light {
+  .TE_selectedTopic {
+    border: 2px solid rgba(0, 0, 0, 0.3);
+  }
+}
+
+body.theme-dark,
+body.theme-black {
+  .TE_selectedTopic {
+    border: 2px solid rgba(255, 255, 255, 0.3);
+  }
+}
