--- a/src/styles/keyboard-navigation.scss
+++ b/src/styles/keyboard-navigation.scss
@@ -29,13 +29,13 @@
 body,
 body.theme-light {
   .TE_selected {
-    border: 2px solid rgba(0, 0, 0, 0.3);
+    border: 2px solid rgba(0, 0, 0, 0.3) !important;
   }
 }
 
 body.theme-dark,
 body.theme-black {
   .TE_selected {
-    border: 2px solid rgba(255, 255, 255, 0.3);
+    border: 2px solid rgba(255, 255, 255, 0.3) !important;
   }
 }
