Adds functionality to open submission links on outline.com

--- a/src/styles/options.scss
+++ b/src/styles/options.scss
@@ -13,6 +13,7 @@ body {
   background-color: $background;
 }
 
+input[type="text"],
 textarea {
   border: 2px solid $background;
   color: $foreground;
